0024517: Crash at StepToTopoDS_TranslateEdge::Init()

Fixed crash at StepToTopoDS_TranslateEdge::Init() for case when curve is absent)

Corrected error message for case of absence geom curve in edge curve